# ai-live-stream

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  schemas.py  type.py
assets/personas/: personas.json
assets/personas/scene_desc/: chinese_trump.txt  peter.txt  speed.txt  spongebob.txt
assets/personas/transcripts/: chinese_trump.txt  peter.txt  speed.txt  spongebob.txt
db/: __init__.py  storage.py
domain/: __init__.py  models.py
routers/: __init__.py  audio.py  messages.py  talk.py
schemas/: __init__.py  audio.py  messages.py
scripts/: test_talk.sh
services/: __init__.py  audio.py  clients.py  generation.py  history.py  interrupts.py  live_stream.py  messages.py  pipeline.py  processor.py  tts.py
