[project]
name = "ai-live-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.0",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "python-dotenv>=1.1.1",
    "redis>=7.0.0",
    "tenacity>=9.1.2",
    "uvicorn>=0.38.0",
]
